--- a/pom.xml
+++ b/pom.xml
@@ -57,11 +57,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>logic</groupId>
-            <artifactId>parsing</artifactId>
-            <version>1.1</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
             <version>3.12</version>
@@ -75,7 +70,7 @@
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
-            <artifactId>gson-parent</artifactId>
+            <artifactId>gson</artifactId>
             <version>2.8.2</version>
         </dependency>
     </dependencies>
