--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.springapp</groupId>
-    <artifactId>ProselyteSpringMVC</artifactId>
+    <artifactId>SbertechTakeUs</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>ProselyteSpringMVC</name>
+    <name>SbertechTakeUs</name>
 
     <properties>
         <spring.version>4.1.1.RELEASE</spring.version>
@@ -17,6 +17,8 @@
             <artifactId>spring-core</artifactId>
             <version>${spring.version}</version>
         </dependency>
+
+        
 
         <dependency>
             <groupId>org.springframework</groupId>
