--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
     </dependencies>
 
     <build>
-        <finalName>ProselyteSpringMVC</finalName>
+        <finalName>SbertechTakeUs</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
